<resources>
    <string name="search">Search</string>
    <string name="app_name">Audit</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Audit!</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="guest">Continue as Guest</string>
    <string name="title_activity_signin">Sign in</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="forgot">Forgot Username or Password?</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="signupForAudit">Sign Up for an Audit Account</string>
    <string name="enterEmail">Email Address</string>
    <string name="enterPassword">Password</string>
    <string name="reenterPassword">Re-enter Password</string>
    <string name="signupUsername">Username</string>
    <string name="submit">Submit</string>

    <string name="menu">Menu</string>
    <string name="viewProfile">View Profile</string>
    <string name="aboutUs">About Us</string>
    <string name="contactUs">Contact Us</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <string name="new_company"> not found. Would you like to be the first to write a review?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="none_available">N/A</string>

    <string name="app_label">Audit</string>

    <string name="overall">Overall:</string>
    <string name="customer_service">Service: </string>
    <string name="shipping">Shipping: </string>
    <string name="quality">Quality: </string>
    <string name="changePicture">Change Picture</string>

    <string name="addReview">Write a Review!</string>
    <string name="reviewFor">Review for </string>

    <string name="koala">Activate Koala Mode</string>
    <string name="prompt_temp_password">Temporary Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_reset_short">Reset</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="send_reset">Send Reset Email</string>
    <string name="placeholder_user_url">http://i.imgur.com/99Vx5QV.jpg</string>
    <string name="placeholder_company_url">http://i.imgur.com/872zUGK.png</string>
</resources>
