<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.calpoly.mjzhao.audit.Startup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:id="@+id/emitter_top_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Space>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Space
            android:id="@+id/emitter_top_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end">
        </Space>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:textSize="32sp"
        android:text="@string/welcome" />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:id="@+id/signin" />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/signup" />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:id="@+id/guest" />

    <Button
        android:id="@+id/koala_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/koala"/>

</LinearLayout>
